Fixing layout issues.

--- a/styles.css
+++ b/styles.css
@@ -454,7 +454,25 @@ p {
 
     .cart-amount {
         margin-top:4rem;
+        width: 40%;
+        display: flex;
+        justify-content:space-between ;
     }
+    #button-minus,#button-minus {
+        display: inline-block;
+        width: 30px;
+        height: 30px;
+    }
+
+    body #button-minus {
+        height: 6px;
+        width: 20px;
+        padding: 0;
+        margin: 0;
+    }
+
+    
+    
 
     
     
